--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/C22-017/Maneyfy-FrontEnd"
+    "url": "https://github.com/C22-017/Maneyfy-FrontEnd.git"
   },
   "author": "C22-017",
   "license": "ISC",
