--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Manage your Money Easily",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "serve": "http-server dist",
+    "build-serve": "npm run build && npm run serve",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,54 @@
   "bugs": {
     "url": "https://github.com/C22-017/Maneyfy-FrontEnd/issues"
   },
-  "homepage": "https://github.com/C22-017/Maneyfy-FrontEnd#readme"
+  "homepage": "https://github.com/C22-017/Maneyfy-FrontEnd#readme",
+  "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.3.6",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.1",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-codeceptjs": "^1.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
+    "imagemin-webp-webpack-plugin": "^3.3.6",
+    "jasmine-ajax": "^4.0.0",
+    "jasmine-core": "^4.2.0",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-jasmine": "^4.0.2",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
+    "node-sass": "^7.0.3",
+    "puppeteer": "^18.2.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "sharp": "^0.31.1",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.6.1",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "whatwg-fetch": "^3.6.2",
+    "workbox-webpack-plugin": "^6.5.4"
+  },
+  "dependencies": {
+    "idb": "^7.1.0",
+    "lazysizes": "^5.3.2",
+    "regenerator-runtime": "^0.13.9",
+    "workbox-window": "^6.5.4"
+  }
 }
