--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^1.7.0",
     "idb": "^7.1.0",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
