--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "bootstrap": "^5.2.2",
     "clean-webpack-plugin": "^4.0.0",
     "codeceptjs": "^3.3.6",
     "copy-webpack-plugin": "^11.0.0",
@@ -64,7 +65,6 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
-    "@flaticon/flaticon-uicons": "^1.7.0",
     "idb": "^7.1.0",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
