--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "codeceptjs": "^3.3.6",
     "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "css-minimizer-webpack-plugin": "^4.2.1",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -49,21 +50,24 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
     "node-sass": "^7.0.3",
+    "postcss-loader": "^7.0.1",
     "puppeteer": "^18.2.1",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "sharp": "^0.31.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.73.0",
+    "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2",
     "workbox-webpack-plugin": "^6.5.4"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "idb": "^7.1.0",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
