--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       "class-methods-use-this": 0,
       "no-new": 0,
       "no-plusplus": 0,
-      "no-await-in-loop": 0
+      "no-await-in-loop": 0,
+      "camelcase": "off",
     }
 }
